# pourfairequoi

./: .gitignore  CLAUDE.md  README.md  check_graph_for_cycles.py  design_principles.md  draft_idea_2.md  draft_ideas_DAG.md  index.html  inner_voice.md  package-lock.json  package.json  philo.md  prompt.txt  pyproject.toml  screenshot.py  todo.md  tsconfig.json  viewer.py  yamls_to_3d_graph.py
backlog/: 20260424_tui_improvements.md  dealing_with_cycles.md  event_as_node.md  improve_2nd_why_display.md  inferred_state.md  lenses.md  node_lifecycle.md  node_type_inference.md  timeline_widget.md
draft_idea/: clarify_sync_strategy.md  inner_voice_local.md
internet_probe/: .gitignore  key_concepts.md  methodo.md  raw_data_index.md  technical_choices.md  user_needs.md
pfq/: __main__.py  app.py  companion.py  config.py  dates.py  disk_io.py  modals.py  model.py  note_panel.py  render.py  sync.py  view.py
project_vault/: 02485O_full_tests_coverage.yaml  02MNF2_add_parent_node.yaml  0G2NG6_related_to_mood_feel.yaml  0HPOJY_clean_docs_and_meta.yaml  0NOK59_home_page_clean_roots_view.yaml  1TXEQZ_git_integration.yaml  2RH06H_try_textual_web_need_a_server.yaml  3WGDPE_add_history_to_node_log_todo_app.yaml  4JNSVI_predictability.yaml  4YOI71_delete_link_vs_delete_node.yaml  5AG4O5_node_fields_free_or_config.yaml  5CN8GT_tests_on_various_env.yaml  5T5R3L_brainstorm_idea.yaml  5UZJNB_strong_usable_base.yaml  75MI79_add_node.yaml  7EB596_decouple_status_prio_sentiment.yaml  7IUZ8V_node_permanent_links_are_event_based.yaml  7QEKMW_debug_insert.yaml  8HM8HT_discoverability.yaml  (+54 more)
(+67 files in other folders)
